--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "body-parser": "1.12.4",
     "express": "^4.13.3",
     "lodash": "3.10.1",
-    "node-restful": "^0.2.2",
-    "body-parser": "1.12.4",
     "method-override": "2.3.3",
+    "mongoose": "4.1.8",
     "morgan": "1.5.3",
-    "mongoose": "4.1.8"
+    "node-restful": "^0.2.2",
+    "q": "^1.4.1"
   },
   "engines": {
     "node": "4.0.0"
