--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "body-parser": "1.12.4",
     "express": "^4.13.3",
     "lodash": "3.10.1",
+    "logger": "0.0.1",
     "method-override": "2.3.3",
     "mongoose": "4.1.8",
     "morgan": "1.5.3",
     "node-restful": "^0.2.2",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "request":"~2.42.0"
+  },
+  "devDependencies": {
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-express-server": "^0.5.1",
+    "grunt-open": "^0.2.3"
   },
   "engines": {
     "node": "4.0.0"
