--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "scratch",
+  "name": "xyz",
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.4.7",
@@ -11,5 +11,5 @@
     "angular-mocks": "^1.4.7"
   },
   "appPath": "client",
-  "moduleName": "scratchApp"
+  "moduleName": "xyzApp"
 }
