--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "scratch",
+  "name": "xyz-2",
   "private": true,
-   "name": "xyz-2",
   "version": "0.0.0",
   "description": "xyz helps to organize music",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-
   "dependencies": {
     "body-parser": "1.12.4",
     "express": "^4.13.3",
@@ -38,13 +36,19 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.1.2",
     "grunt-google-cdn": "^0.4.3",
+    "grunt-karma": "^0.12.1",
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^0.9.2",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
+    "jasmine-core": "^2.3.4",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
+    "karma": "^0.13.14",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "phantomjs": "^1.9.18",
     "time-grunt": "^1.0.0"
   },
   "engines": {
