--- a/bower.json
+++ b/bower.json
@@ -2,14 +2,17 @@
   "name": "xyz",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.4.7",
-    "angular-sanitize": "^1.4.7",
+    "angular": "1.4.1",
+    "angular-sanitize": "1.4.1",
     "angular-ui-router": "0.2.15",
-    "lodash":"3.10.1"
+    "lodash": "3.10.1"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.7"
+    "angular-mocks": "1.4.1"
   },
   "appPath": "client",
-  "moduleName": "xyzApp"
+  "moduleName": "xyzApp",
+  "resolutions": {
+    "angular": "1.4.1"
+  }
 }
