--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "q": "^1.4.1"
   },
   "devDependencies": {
+    "angular-mocks": "1.4.1",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
     "grunt-autoprefixer": "^2.0.0",
