--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "angular-sanitize": "1.4.1",
     "angular-ui-router": "0.2.15",
     "lodash": "3.10.1",
-    "angular-easyfb": "~1.4.1"
+    "angular-easyfb": "~1.4.1",
+    "angular-local-storage": "~0.2.3"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1"
