--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mongoose": "4.1.8",
     "morgan": "1.5.3",
     "node-restful": "^0.2.2",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "request":"2.53.0"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1",
