--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "bower install"
   },
   "dependencies": {
+    "bower": "1.6.5",
     "body-parser": "1.12.4",
     "express": "^4.13.3",
     "lodash": "3.10.1",
@@ -18,9 +19,10 @@
     "morgan": "1.5.3",
     "node-restful": "^0.2.2",
     "q": "^1.4.1",
-    "request":"2.53.0"
+    "request": "2.53.0"
   },
   "devDependencies": {
+    "bower": "1.6.5",
     "angular-mocks": "1.4.1",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
