--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "xyz helps to organize music",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "postinstall": "bower install"
+    "start": "node index.js"
   },
   "dependencies": {
     "bower": "1.6.5",
@@ -22,7 +21,7 @@
     "request": "2.53.0"
   },
   "devDependencies": {
-    "bower": "1.6.5",
+
     "angular-mocks": "1.4.1",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
