--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "bower": "1.6.5",
     "body-parser": "1.12.4",
+    "bower": "1.6.5",
     "express": "^4.13.3",
+    "grunt-processhtml": "^0.3.8",
     "lodash": "3.10.1",
     "logger": "0.0.1",
     "method-override": "2.3.3",
@@ -22,7 +23,6 @@
     "request": "2.53.0"
   },
   "devDependencies": {
-
     "angular-mocks": "1.4.1",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
