--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular-ui-router": "0.2.15",
     "lodash": "3.10.1",
     "angular-easyfb": "~1.4.1",
-    "angular-local-storage": "~0.2.3"
+    "angular-local-storage": "~0.2.3",
+    "angular-touch": "~1.4.8"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1"
