--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
   "dependencies": {
     "body-parser": "1.12.4",
     "bower": "1.6.5",
+    "compression": "^1.0.3",
+    "cors": "^2.5.2",
     "express": "^4.13.3",
+    "grunt-docular": "^0.2.4",
     "grunt-processhtml": "^0.3.8",
     "lodash": "3.10.1",
     "logger": "0.0.1",
+    "loopback": "^2.22.0",
+    "loopback-boot": "^2.6.5",
+    "loopback-component-explorer": "^2.1.0",
+    "loopback-connector-mongodb": "^1.13.2",
+    "loopback-datasource-juggler": "^2.39.0",
     "method-override": "2.3.3",
     "mongoose": "4.1.8",
     "morgan": "1.5.3",
     "node-restful": "^0.2.2",
     "q": "^1.4.1",
     "request": "2.53.0",
-    "soundcloud": "^3.0.1",
-    "compression": "^1.0.3",
-    "cors": "^2.5.2",
-    "loopback": "^2.22.0",
-    "loopback-boot": "^2.6.5",
-    "loopback-component-explorer": "^2.1.0",
-    "loopback-connector-mongodb": "^1.13.2",
-    "loopback-datasource-juggler": "^2.39.0",
-    "serve-favicon": "^2.0.1"
+    "serve-favicon": "^2.0.1",
+    "soundcloud": "^3.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1",
