package.json and gulpfile

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "xyz helps to organize music",
   "main": "server/server.js",
   "scripts": {
-    "postinstall": "bower install",
+    "postinstall": "gulp",
     "start": "node server/server.js"
   },
   "dependencies": {
@@ -13,9 +13,25 @@
     "bower": "1.6.5",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
+    "del": "^2.2.0",
     "express": "^4.13.3",
     "grunt-docular": "^0.2.4",
     "grunt-processhtml": "^0.3.8",
+    "gulp": "^3.9.0",
+    "gulp-bower": "0.0.11",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.3.1",
+    "gulp-jshint": "^2.0.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-uglify": "^1.5.1",
+    "browser-sync": "^2.11.0",
+    "gulp-if": "^2.0.0",
+    "gulp-sass": "^2.1.1",
+    "gulp-useref": "^3.0.4",
+    "run-sequence": "^1.1.5",
+    "gulp-cssnano": "^2.1.0",
     "lodash": "3.10.1",
     "logger": "0.0.1",
     "loopback": "^2.22.0",
@@ -57,6 +73,14 @@
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
+    "gulp": "^3.9.0",
+    "gulp-bower": "0.0.11",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.3.1",
+    "gulp-jshint": "^2.0.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-replace": "^0.5.4",
+    "gulp-uglify": "^1.5.1",
     "jasmine-core": "^2.3.4",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
