--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "description": "xyz helps to organize music",
   "main": "server/server.js",
   "scripts": {
-    "postinstall": "gulp",
+    "postinstall": "gulp build",
     "start": "node server/server.js"
   },
   "dependencies": {
     "body-parser": "1.12.4",
     "bower": "1.6.5",
+    "browser-sync": "^2.11.0",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "del": "^2.2.0",
@@ -21,17 +22,17 @@
     "gulp-bower": "0.0.11",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.3.1",
+    "gulp-cssnano": "^2.1.0",
+    "gulp-if": "^2.0.0",
     "gulp-jshint": "^2.0.0",
+    "gulp-loopback-sdk-angular": "^0.1.4",
     "gulp-nodemon": "^2.0.6",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
-    "gulp-uglify": "^1.5.1",
-    "browser-sync": "^2.11.0",
-    "gulp-if": "^2.0.0",
+    "gulp-run": "^1.6.12",
     "gulp-sass": "^2.1.1",
+    "gulp-uglify": "^1.5.1",
     "gulp-useref": "^3.0.4",
-    "run-sequence": "^1.1.5",
-    "gulp-cssnano": "^2.1.0",
     "lodash": "3.10.1",
     "logger": "0.0.1",
     "loopback": "^2.22.0",
@@ -45,6 +46,7 @@
     "node-restful": "^0.2.2",
     "q": "^1.4.1",
     "request": "2.53.0",
+    "run-sequence": "^1.1.5",
     "serve-favicon": "^2.0.1",
     "soundcloud": "^3.0.1"
   },
