--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bower": "1.6.5",
     "browser-sync": "^2.11.0",
     "compression": "^1.0.3",
+    "connect-history-api-fallback": "^1.1.0",
     "cors": "^2.5.2",
     "del": "^2.2.0",
     "express": "^4.13.3",
