--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-sass": "^2.1.1",
     "gulp-uglify": "^1.5.1",
     "gulp-useref": "^3.0.4",
+    "jshint": "^2.9.1",
     "lodash": "^3.10.1",
     "logger": "0.0.1",
     "loopback": "^2.22.0",
@@ -44,8 +45,7 @@
     "request": "2.53.0",
     "run-sequence": "^1.1.5",
     "serve-favicon": "^2.0.1",
-    "soundcloud": "^3.0.1",
-    "jshint-stylish": "^1.0.0"
+    "soundcloud": "^3.0.1"
   },
   "devDependencies": {
     "grunt-docular": "^0.2.4",
