--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bower": "1.6.5",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
+    "connect-history-api-fallback": "^1.1.0",
     "del": "^2.2.0",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
@@ -46,12 +47,11 @@
     "request": "2.53.0",
     "run-sequence": "^1.1.5",
     "serve-favicon": "^2.0.1",
-    "soundcloud": "^3.0.1"
+    "soundcloud": "^3.0.1",
+    "browser-sync": "^2.11.0"
   },
   "devDependencies": {
     "grunt-docular": "^0.2.4",
-    "browser-sync": "^2.11.0",
-    "connect-history-api-fallback": "^1.1.0",
     "angular-mocks": "1.4.1",
     "jasmine-core": "^2.3.4",
     "jit-grunt": "^0.9.1",
