--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "gulp-uglify": "^1.5.1",
     "gulp-useref": "^3.0.4",
     "jshint": "^2.9.1",
-    "lodash": "^3.10.1",
+    "kerberos": "0.0.18",
+    "lodash": "3.10.1",
     "logger": "0.0.1",
     "loopback": "^2.22.0",
     "loopback-boot": "^2.6.5",
