--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "xyz helps to organize music",
   "main": "server/server.js",
   "scripts": {
-    "postinstall": "gulp build",
+    "postinstall": "gulp build:production",
     "start": "node server/server.js"
   },
   "dependencies": {
