needed to npm install

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "del": "^2.2.0",
     "event-stream": "^3.3.2",
     "express": "^4.13.3",
+    "grunt": "^0.4.5",
     "gulp": "^3.9.0",
     "gulp-bower": "0.0.11",
     "gulp-concat": "^2.6.0",
@@ -64,4 +65,3 @@
     "node": "4.2.6"
   }
 }
-
