--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "request": "2.53.0",
     "run-sequence": "^1.1.5",
     "serve-favicon": "^2.0.1",
-    "soundcloud": "^3.0.1"
-  },
-  "devDependencies": {
+    "soundcloud": "^3.0.1",
     "gulp-nodemon": "^2.0.6",
     "browser-sync": "^2.11.0",
+  },
+  "devDependencies": {
     "grunt-docular": "^0.2.4",
     "angular-mocks": "1.4.1",
     "jasmine-core": "^2.3.4",
