--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "serve-favicon": "^2.0.1",
     "soundcloud": "^3.0.1",
     "supertest": "^1.2.0",
-    "supertest-as-promised": "^3.1.0"
+    "supertest-as-promised": "^3.1.0",
+    "when": "^3.7.7"
   },
   "devDependencies": {
     "grunt-docular": "^0.2.4",
