--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,11 @@
     "angular-local-storage": "~0.2.3",
     "angular-touch": "~1.4.8",
     "angular-resource": "~1.4.8",
-    "angular-live-set": "*"
+    "angular-live-set": "*",
+    "angular-material": "^1.0.9",
+    "angular-animate": "^1.5.5",
+    "angular-aria": "^1.5.5",
+    "material-design-icons": "^2.2.3"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1"
@@ -18,6 +22,6 @@
   "appPath": "client",
   "moduleName": "xyzApp",
   "resolutions": {
-    "angular": "~1.4.9"
+    "angular": "1.5.5"
   }
 }
