--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "xyz",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.4.9",
+    "angular": "~1.5.6",
     "angular-sanitize": "1.4.1",
     "angular-ui-router": "0.2.15",
     "lodash": "3.10.1",
@@ -12,16 +12,13 @@
     "angular-resource": "~1.4.8",
     "angular-live-set": "*",
     "angular-material": "^1.0.9",
-    "angular-animate": "^1.5.5",
-    "angular-aria": "^1.5.5",
+    "angular-animate": "^1.5.6",
+    "angular-aria": "^1.5.6",
     "material-design-icons": "^2.2.3"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1"
   },
   "appPath": "client",
-  "moduleName": "xyzApp",
-  "resolutions": {
-    "angular": "1.5.5"
-  }
+  "moduleName": "xyzApp"
 }
