--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,7 @@
     "angular-live-set": "*",
     "angular-material": "^1.0.9",
     "angular-animate": "^1.5.6",
-    "angular-aria": "^1.5.6",
-    "material-design-icons": "^2.2.3"
+    "angular-aria": "^1.5.6"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1"
