remove unused models, tighten up docs generation

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "gulp-if": "^2.0.0",
     "gulp-jshint": "^2.0.0",
     "gulp-loopback-sdk-angular": "^0.1.4",
+    "gulp-ngdocs": "^0.2.13",
     "gulp-nodemon": "^2.0.6",
+    "gulp-open": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-run": "^1.6.12",
