--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.3.1",
     "gulp-cssnano": "^2.1.0",
+    "gulp-exec": "^2.1.2",
     "gulp-if": "^2.0.0",
     "gulp-jshint": "^2.0.0",
     "gulp-loopback-sdk-angular": "^0.1.4",
@@ -45,6 +46,7 @@
     "loopback-connector-mongodb": "^1.13.3",
     "loopback-datasource-juggler": "^2.45.0",
     "method-override": "2.3.3",
+    "mongodb-uri": "^0.9.7",
     "q": "^1.4.1",
     "request": "2.53.0",
     "run-sequence": "^1.1.5",
