update loopback packages

--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "jshint": "^2.9.1",
     "lodash": "^3.10.1",
     "logger": "0.0.1",
-    "loopback": "^2.26.2",
-    "loopback-boot": "^2.6.5",
-    "loopback-component-explorer": "^2.1.0",
-    "loopback-connector-mongodb": "^1.13.3",
-    "loopback-datasource-juggler": "^2.45.0",
+    "loopback": "^2.29.0",
+    "loopback-boot": "^2.19.0",
+    "loopback-component-explorer": "^2.5.0",
+    "loopback-connector-mongodb": "^1.15.2",
+    "loopback-datasource-juggler": "^2.46.1",
+    "loopback-sdk-angular": "^1.7.0",
     "method-override": "2.3.3",
     "mongodb-uri": "^0.9.7",
     "q": "^1.4.1",
