--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "loopback-sdk-angular": "^1.7.0",
     "method-override": "2.3.3",
     "mongodb-uri": "^0.9.7",
+    "morgan": "^1.7.0",
     "q": "^1.4.1",
     "request": "2.53.0",
     "run-sequence": "^1.1.5",
