--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server/server.js",
   "scripts": {
     "postinstall": "gulp build:production",
-    "start": "node server/server.js"
+    "start": "node start.js "
   },
   "dependencies": {
     "body-parser": "1.12.4",
@@ -48,7 +48,6 @@
     "loopback-sdk-angular": "^1.7.0",
     "method-override": "2.3.3",
     "mongodb-uri": "^0.9.7",
-    "morgan": "^1.7.0",
     "q": "^1.4.1",
     "request": "2.53.0",
     "run-sequence": "^1.1.5",
