--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "del": "^2.2.0",
     "event-stream": "^3.3.2",
     "express": "^4.13.3",
+    "forever": "^0.15.2",
+    "forever-monitor": "^1.7.0",
     "grunt": "^0.4.5",
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.11",
@@ -48,6 +50,7 @@
     "loopback-sdk-angular": "^1.7.0",
     "method-override": "2.3.3",
     "mongodb-uri": "^0.9.7",
+    "morgan": "^1.7.0",
     "q": "^1.4.1",
     "request": "2.53.0",
     "run-sequence": "^1.1.5",
