--- a/package.json
+++ b/package.json
@@ -52,14 +52,15 @@
     "method-override": "2.3.3",
     "mongodb-uri": "^0.9.7",
     "morgan": "^1.7.0",
+    "node-soundcloud": "0.0.5",
     "q": "^1.4.1",
     "request": "2.53.0",
     "run-sequence": "^1.1.5",
     "serve-favicon": "^2.0.1",
-    "soundcloud": "^3.0.1",
     "supertest": "^1.2.0",
     "supertest-as-promised": "^3.1.0",
-    "when": "^3.7.7"
+    "when": "^3.7.7",
+    "youtube-node": "^1.3.0"
   },
   "devDependencies": {
     "grunt-docular": "^0.2.4",
