--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-connect": "^2.3.1",
     "gulp-cssnano": "^2.1.0",
     "gulp-exec": "^2.1.2",
+    "gulp-exit": "0.0.2",
     "gulp-if": "^2.0.0",
     "gulp-jshint": "^2.0.0",
     "gulp-loopback-sdk-angular": "^0.1.4",
