--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-resource": "~1.4.8",
     "angular-live-set": "*",
     "angular-animate": "^1.5.6",
-    "angular-aria": "^1.5.6"
+    "angular-aria": "^1.5.6",
+    "angular-ellipsis": "^0.1.6"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1"
