--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-live-set": "*",
     "angular-animate": "^1.5.6",
     "angular-aria": "^1.5.6",
-    "angular-ellipsis": "^0.1.6"
+    "angular-ellipsis": "^0.1.6",
+    "ngToast": "ngtoast#^2.0.0"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1"
