--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "description": "xyz helps to organize music",
   "main": "server/server.js",
   "scripts": {
-    "postinstall": "gulp build:production",
+    "postinstall": "gulp build",
     "start": "node start.js "
   },
   "dependencies": {
     "body-parser": "1.12.4",
     "bower": "1.6.5",
-    "browser-sync": "^2.11.0",
+    "browser-sync": "2.8.2",
     "compression": "^1.0.3",
     "connect-history-api-fallback": "^1.1.0",
     "cors": "^2.5.2",
@@ -21,7 +21,8 @@
     "forever": "^0.15.2",
     "forever-monitor": "^1.7.0",
     "grunt": "^0.4.5",
-    "gulp": "^3.9.1",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-angular-templatecache": "^2.0.0",
     "gulp-bower": "0.0.11",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.3.1",
@@ -64,8 +65,8 @@
     "youtube-node": "^1.3.0"
   },
   "devDependencies": {
-    "grunt-docular": "^0.2.4",
     "angular-mocks": "1.4.1",
+    "grunt-docular": "^0.2.4",
     "jasmine-core": "^2.3.4",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
@@ -77,5 +78,6 @@
   },
   "engines": {
     "node": "4.2.6"
-  }
+  },
+  "optionalDependencies": {}
 }
