--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.13.3",
     "forever": "^0.15.2",
     "forever-monitor": "^1.7.0",
+    "fs": "0.0.1-security",
     "grunt": "^0.4.5",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-angular-protractor": "^0.1.4",
