--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-uglify": "^1.5.1",
     "gulp-useref": "^3.0.4",
     "jshint": "^2.9.1",
+    "karma": "^0.13.22",
     "lodash": "^3.10.1",
     "logger": "0.0.1",
     "loopback": "^2.29.0",
