--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "mongodb-uri": "^0.9.7",
     "morgan": "^1.7.0",
     "node-soundcloud": "0.0.5",
+    "protractor": "^4.0.9",
     "q": "^1.4.1",
     "request": "2.53.0",
     "run-sequence": "^1.1.5",
