--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-aria": "^1.5.6",
     "angular-ellipsis": "^0.1.6",
     "ngToast": "ngtoast#^2.0.0",
-    "soundcloud": "^3.1.2"
+    "soundcloud": "^3.1.2",
+    "angular-messages": "1.5.8"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1"
