--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "gulp-angular-protractor": "^0.1.4",
     "gulp-angular-templatecache": "^2.0.0",
     "gulp-bower": "0.0.11",
-    "gulp-concat": "^2.6.0",
+    "gulp-buster": "^1.1.0",
     "gulp-connect": "^2.3.1",
     "gulp-cssnano": "^2.1.0",
     "gulp-exec": "^2.1.2",
@@ -34,11 +34,14 @@
     "gulp-if": "^2.0.0",
     "gulp-jshint": "^2.0.0",
     "gulp-loopback-sdk-angular": "^0.1.4",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-ngdocs": "^0.2.13",
     "gulp-nodemon": "^2.0.6",
     "gulp-open": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
+    "gulp-rev": "^7.1.2",
+    "gulp-rev-replace": "^0.4.3",
     "gulp-run": "^1.6.12",
     "gulp-sass": "^2.1.1",
     "gulp-uglify": "^1.5.1",
