--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "gulp-ng-annotate": "^2.0.0",
     "gulp-ngdocs": "^0.2.13",
     "gulp-nodemon": "^2.0.6",
+    "gulp-notify": "^2.2.0",
     "gulp-open": "^2.0.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-rev": "^7.1.2",
