--- a/bower.json
+++ b/bower.json
@@ -10,9 +10,8 @@
     "angular-local-storage": "~0.2.3",
     "angular-resource": "~1.4.8",
     "angular-live-set": "*",
-    "angular-animate": "^1.5.6",
-    "angular-aria": "^1.5.6",
-    "angular-ellipsis": "^0.1.6",
+    "angular-animate": "~1.5.6",
+    "angular-aria": "~1.5.6",
     "ngToast": "ngtoast#^2.0.0",
     "soundcloud": "^3.1.2",
     "angular-messages": "1.5.8"
@@ -22,7 +21,4 @@
   },
   "appPath": "client",
   "moduleName": "xyzApp",
-  "resolutions": {
-    "angular": "~1.5.6"
-  }
 }
