--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-aria": "1.6.0",
     "ngToast": "ngtoast#^2.0.0",
     "soundcloud": "^3.1.2",
-    "angular-messages": "1.6.0"
+    "angular-messages": "1.6.0",
+    "web-animations-js": "^2.2.2"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1"
