--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "supertest": "^1.2.0",
     "supertest-as-promised": "^3.1.0",
     "when": "^3.7.7",
+    "winston": "2.3.1",
+    "winston-papertrail": "1.0.4",
     "youtube-node": "^1.3.0"
   },
   "devDependencies": {
