--- a/server/config.json
+++ b/server/config.json
@@ -20,5 +20,6 @@
       "disableStackTrace": false
     }
   },
-  "legacyExplorer": false
+  "legacyExplorer": false,
+  "logoutSessionsOnSensitiveChanges":true
 }
