--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mailgun-js": "^0.7.12",
     "marked": "^0.3.6",
     "method-override": "2.3.3",
+    "mongodb": "2.2.22",
     "mongodb-uri": "^0.9.7",
     "morgan": "^1.7.0",
     "node-soundcloud": "0.0.5",
