--- a/package.json
+++ b/package.json
@@ -76,8 +76,7 @@
     "when": "^3.7.7",
     "winston": "2.3.1",
     "winston-papertrail": "1.0.4",
-    "youtube-api": "^2.0.6",
-    "youtube-node": "^1.3.0"
+    "youtube-api": "^2.0.6"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1",
