--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "fs": "0.0.1-security",
     "grunt": "^0.4.5",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-angular-protractor": "^0.1.4",
+    "gulp-angular-protractor": "1.0.0",
     "gulp-angular-templatecache": "^2.0.0",
     "gulp-bower": "0.0.11",
     "gulp-buster": "^1.1.0",
