--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-exec": "^2.1.2",
     "gulp-exit": "0.0.2",
     "gulp-if": "^2.0.0",
+    "gulp-jasmine": "^2.4.2",
     "gulp-jshint": "^2.0.0",
     "gulp-loopback-sdk-angular": "^0.1.4",
     "gulp-ng-annotate": "^2.0.0",
