--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "dependencies": {
     "body-parser": "1.12.4",
     "bower": "1.6.5",
-    "browser-sync": "2.8.2",
     "compression": "^1.0.3",
-    "connect-history-api-fallback": "^1.1.0",
     "cors": "^2.5.2",
     "del": "^2.2.0",
     "event-stream": "^3.3.2",
@@ -23,24 +21,14 @@
     "fs": "0.0.1-security",
     "grunt": "^0.4.5",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-angular-protractor": "1.0.0",
     "gulp-angular-templatecache": "^2.0.0",
     "gulp-bower": "0.0.11",
     "gulp-buster": "^1.1.0",
-    "gulp-connect": "^2.3.1",
     "gulp-cssnano": "^2.1.0",
-    "gulp-exec": "^2.1.2",
     "gulp-exit": "0.0.2",
     "gulp-if": "^2.0.0",
-    "gulp-jasmine": "^2.4.2",
-    "gulp-jshint": "^2.0.0",
-    "gulp-loopback-sdk-angular": "^0.1.4",
     "gulp-ng-annotate": "^2.0.0",
-    "gulp-ngdocs": "^0.2.13",
-    "gulp-nodemon": "^2.0.6",
     "gulp-notify": "^2.2.0",
-    "gulp-open": "^2.0.0",
-    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-rev": "^7.1.2",
@@ -50,7 +38,6 @@
     "gulp-uglify": "^1.5.1",
     "gulp-useref": "^3.0.4",
     "jshint": "^2.9.1",
-    "karma": "^0.13.22",
     "lodash": "^3.10.1",
     "logger": "0.0.1",
     "loopback": "^2.29.0",
@@ -59,7 +46,6 @@
     "loopback-connector-mongodb": "^1.15.2",
     "loopback-datasource-juggler": "^2.46.1",
     "loopback-ds-timestamp-mixin": "^3.4.0",
-    "loopback-sdk-angular": "^1.7.0",
     "mailgun-js": "^0.7.12",
     "marked": "^0.3.6",
     "method-override": "2.3.3",
@@ -81,15 +67,25 @@
   },
   "devDependencies": {
     "angular-mocks": "1.4.1",
-    "grunt-docular": "^0.2.4",
     "jasmine-core": "^2.3.4",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
-    "karma": "^0.13.14",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "phantomjs": "^1.9.18",
-    "time-grunt": "^1.0.0"
+    "time-grunt": "^1.0.0",
+    "browser-sync": "2.8.2",
+    "connect-history-api-fallback": "^1.1.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-connect": "^2.3.1",
+    "gulp-jshint": "^2.0.0",
+    "gulp-jasmine": "^2.4.2",
+    "gulp-loopback-sdk-angular": "^0.1.4",
+    "gulp-ngdocs": "^0.2.13",
+    "gulp-exec": "^2.1.2",
+    "gulp-angular-protractor": "1.0.0",
+    "karma": "^0.13.22",
+    "loopback-sdk-angular": "^1.7.0"
   },
   "engines": {
     "node": "6.11.1"
