--- a/package.json
+++ b/package.json
@@ -12,20 +12,14 @@
     "body-parser": "1.12.4",
     "bower": "1.6.5",
     "compression": "^1.0.3",
-    "cors": "^2.5.2",
     "del": "^2.2.0",
-    "event-stream": "^3.3.2",
     "express": "^4.13.3",
     "forever": "^0.15.2",
-    "forever-monitor": "^1.7.0",
-    "fs": "0.0.1-security",
     "grunt": "^0.4.5",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-angular-templatecache": "^2.0.0",
     "gulp-bower": "0.0.11",
-    "gulp-buster": "^1.1.0",
     "gulp-cssnano": "^2.1.0",
-    "gulp-exit": "0.0.2",
     "gulp-if": "^2.0.0",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-notify": "^2.2.0",
@@ -33,9 +27,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-rev": "^7.1.2",
     "gulp-rev-replace": "^0.4.3",
-    "gulp-run": "^1.6.12",
     "gulp-sass": "^2.1.1",
-    "gulp-uglify": "^1.5.1",
     "gulp-useref": "^3.0.4",
     "jshint": "^2.9.1",
     "lodash": "^3.10.1",
@@ -47,19 +39,13 @@
     "loopback-datasource-juggler": "^2.46.1",
     "loopback-ds-timestamp-mixin": "^3.4.0",
     "mailgun-js": "^0.7.12",
-    "marked": "^0.3.6",
-    "method-override": "2.3.3",
     "mongodb": "2.2.22",
     "mongodb-uri": "^0.9.7",
     "morgan": "^1.7.0",
     "node-soundcloud": "0.0.5",
-    "protractor": "^4.0.9",
     "q": "^1.4.1",
     "request": "2.53.0",
     "run-sequence": "^1.1.5",
-    "serve-favicon": "^2.0.1",
-    "supertest": "^1.2.0",
-    "supertest-as-promised": "^3.1.0",
     "when": "^3.7.7",
     "winston": "2.3.1",
     "winston-papertrail": "1.0.4",
@@ -85,7 +71,10 @@
     "gulp-exec": "^2.1.2",
     "gulp-angular-protractor": "1.0.0",
     "karma": "^0.13.22",
-    "loopback-sdk-angular": "^1.7.0"
+    "loopback-sdk-angular": "^1.7.0",
+    "protractor": "^4.0.9",
+    "supertest": "^1.2.0",
+    "supertest-as-promised": "^3.1.0"
   },
   "engines": {
     "node": "6.11.1"
