--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "1.12.4",
     "bower": "1.6.5",
     "compression": "^1.0.3",
+    "cors": "^2.8.4",
     "del": "^2.2.0",
     "express": "^4.13.3",
     "forever": "^0.15.2",
@@ -32,12 +33,11 @@
     "jshint": "^2.9.1",
     "lodash": "^3.10.1",
     "logger": "0.0.1",
-    "loopback": "^2.29.0",
-    "loopback-boot": "^2.19.0",
+    "loopback": "^3.9.0",
+    "loopback-boot": "^2.26.0",
     "loopback-component-explorer": "^2.5.0",
     "loopback-connector-mongodb": "^1.15.2",
-    "loopback-datasource-juggler": "^2.46.1",
-    "loopback-ds-timestamp-mixin": "^3.4.0",
+    "loopback-ds-timestamp-mixin": "^3.4.1",
     "mailgun-js": "^0.7.12",
     "mongodb": "2.2.22",
     "mongodb-uri": "^0.9.7",
@@ -46,6 +46,7 @@
     "q": "^1.4.1",
     "request": "2.53.0",
     "run-sequence": "^1.1.5",
+    "strong-error-handler": "^2.2.0",
     "when": "^3.7.7",
     "winston": "2.3.1",
     "winston-papertrail": "1.0.4",
@@ -54,24 +55,22 @@
   "devDependencies": {
     "angular-mocks": "1.4.1",
     "jasmine-core": "^2.3.4",
-    "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "phantomjs": "^1.9.18",
-    "time-grunt": "^1.0.0",
     "browser-sync": "2.8.2",
     "connect-history-api-fallback": "^1.1.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-connect": "^2.3.1",
     "gulp-jshint": "^2.0.0",
     "gulp-jasmine": "^2.4.2",
-    "gulp-loopback-sdk-angular": "^0.1.4",
+    "gulp-loopback-sdk-angular": "^0.2.0",
     "gulp-ngdocs": "^0.2.13",
     "gulp-exec": "^2.1.2",
     "gulp-angular-protractor": "1.0.0",
     "karma": "^0.13.22",
-    "loopback-sdk-angular": "^1.7.0",
+    "loopback-sdk-angular": "^3.2.0",
     "protractor": "^4.0.9",
     "supertest": "^1.2.0",
     "supertest-as-promised": "^3.1.0"
