--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "1.12.4",
     "bower": "1.6.5",
     "compression": "^1.0.3",
+    "cors": "^2.8.4",
     "del": "^2.2.0",
     "express": "^4.13.3",
     "forever": "^0.15.2",
