update and trim unused packages

--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "jshint": "^2.9.1",
     "lodash": "^3.10.1",
     "logger": "0.0.1",
-    "loopback": "^2.29.0",
-    "loopback-boot": "^2.19.0",
+    "loopback": "2.38.1",
+    "loopback-boot": "^2.26.0",
     "loopback-component-explorer": "^2.5.0",
-    "loopback-connector-mongodb": "^1.15.2",
-    "loopback-datasource-juggler": "^2.46.1",
+    "loopback-connector-mongodb": "^1.18.1",
+    "loopback-datasource-juggler": "^2.54.2",
     "loopback-ds-timestamp-mixin": "^3.4.0",
     "mailgun-js": "^0.7.12",
     "mongodb": "2.2.22",
@@ -54,28 +54,27 @@
   },
   "devDependencies": {
     "angular-mocks": "1.4.1",
+    "browser-sync": "2.8.2",
+    "connect-history-api-fallback": "^1.1.0",
+    "dotenv": "^4.0.0",
+    "gulp-angular-protractor": "1.0.0",
+    "gulp-connect": "^2.3.1",
+    "gulp-exec": "^2.1.2",
+    "gulp-jasmine": "^2.4.2",
+    "gulp-jshint": "^2.0.0",
+    "gulp-ngdocs": "^0.2.13",
+    "gulp-nodemon": "^2.0.6",
     "jasmine-core": "^2.3.4",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
+    "karma": "^0.13.22",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
+    "loopback-sdk-angular": "^1.10.2",
     "phantomjs": "^1.9.18",
-    "time-grunt": "^1.0.0",
-    "browser-sync": "2.8.2",
-    "connect-history-api-fallback": "^1.1.0",
-    "gulp-nodemon": "^2.0.6",
-    "gulp-connect": "^2.3.1",
-    "gulp-jshint": "^2.0.0",
-    "gulp-jasmine": "^2.4.2",
-    "gulp-loopback-sdk-angular": "^0.1.4",
-    "gulp-ngdocs": "^0.2.13",
-    "gulp-exec": "^2.1.2",
-    "gulp-angular-protractor": "1.0.0",
-    "karma": "^0.13.22",
-    "loopback-sdk-angular": "^1.7.0",
     "protractor": "^4.0.9",
-    "supertest": "^1.2.0",
-    "supertest-as-promised": "^3.1.0"
+    "supertest": "^3.0.0",
+    "time-grunt": "^1.0.0"
   },
   "engines": {
     "node": "6.11.1"
