--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "devDependencies": {
     "angular-mocks": "1.4.1",
-    "browser-sync": "2.8.2",
+    "browser-sync": "2.12.1",
     "connect-history-api-fallback": "^1.1.0",
     "dotenv": "^4.0.0",
     "gulp-angular-protractor": "1.0.0",
@@ -64,6 +64,7 @@
     "gulp-jshint": "^2.0.0",
     "gulp-ngdocs": "^0.2.13",
     "gulp-nodemon": "^2.0.6",
+    "http-proxy-middleware": "^0.17.4",
     "jasmine-core": "^2.3.4",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
