igmore loopbac file again

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ xyzDbDump/
 
 /xyz-player-component/css/
 /client/scripts/templates.js
+/client/scripts/services/lb-services.js
 /test/e2e-tests/screenshots/
 /admin-dist/
 /admin/scripts/templates.js
