--- a/package.json
+++ b/package.json
@@ -50,13 +50,13 @@
     "when": "^3.7.7",
     "winston": "2.3.1",
     "winston-papertrail": "1.0.4",
-    "youtube-node": "^1.3.0"
+    "youtube-node": "^1.3.0",
+    "dotenv": "^4.0.0"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1",
     "browser-sync": "2.12.1",
     "connect-history-api-fallback": "^1.1.0",
-    "dotenv": "^4.0.0",
     "gulp-angular-protractor": "1.0.0",
     "gulp-connect": "^2.3.1",
     "gulp-exec": "^2.1.2",
