--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.0.3",
     "cors": "^2.8.4",
     "del": "^2.2.0",
+    "dotenv": "^4.0.0",
     "express": "^4.13.3",
     "forever": "^0.15.2",
     "grunt": "^0.4.5",
@@ -39,6 +40,7 @@
     "loopback-connector-mongodb": "^1.18.1",
     "loopback-datasource-juggler": "^2.54.2",
     "loopback-ds-timestamp-mixin": "^3.4.0",
+    "loopback-sdk-angular-cli": "^3.1.0",
     "mailgun-js": "^0.7.12",
     "mongodb": "2.2.22",
     "mongodb-uri": "^0.9.7",
@@ -50,8 +52,7 @@
     "when": "^3.7.7",
     "winston": "2.3.1",
     "winston-papertrail": "1.0.4",
-    "youtube-node": "^1.3.0",
-    "dotenv": "^4.0.0"
+    "youtube-node": "^1.3.0"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1",
