--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "XYZ",
-  "name": "XYZ: organize your music",
+  "name": "",
   "icons": [
     {
       "src": "images/Icon-App-40x40@1x.png",
